--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -9,12 +9,12 @@ ja:
     failure:
       already_authenticated: "You are already signed in."
       inactive: "Your account is not activated yet."
-      invalid: "Invalid %{authentication_keys} or password."
+      invalid: "メールアドレスまたはパスワードが違います。"
       locked: "Your account is locked."
       last_attempt: "You have one more attempt before your account is locked."
-      not_found_in_database: "Invalid %{authentication_keys} or password."
+      not_found_in_database: "メールアドレスまたはパスワードが違います。"
       timeout: "Your session expired. Please sign in again to continue."
-      unauthenticated: "You need to sign in or sign up before continuing."
+      unauthenticated: "開こうとしたページはログインか会員登録をしていない状態では開けません。"
       unconfirmed: "You have to confirm your email address before continuing."
     mailer:
       confirmation_instructions:
@@ -46,7 +46,7 @@ ja:
       updated: "会員情報が編集されました。"
       updated_but_not_signed_in: "Your account has been updated successfully, but since your password was changed, you need to sign in again"
     sessions:
-      signed_in: "ログインが成功しました"
+      signed_in: "ログインが成功しました。"
       signed_out: "ログアウトしました。"
       already_signed_out: "Signed out successfully."
     unlocks:
